--- a/login.html
+++ b/login.html
@@ -3,6 +3,20 @@
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
+  <script>
+   
+   function validate(){
+     var attempt = 3;
+       for (let i = 0; i < attempt; i++){
+   var username = document.getElementById("username").value;
+   var password = document.getElementById("password").value;
+   if(username == "rohith" && password == "rohith"){
+alert('You are logged in.');
+return true;    
+}else {
+alert('Error on login');
+return false;
+}}}</script>
   
     <title>EXAM CELL AUTOMATION</title>
  <link rel="icon" href="https://www.freeiconspng.com/uploads/study-icon-21.png"/>
@@ -98,7 +112,7 @@ button{
     
 <div class="box" id="login">
 
-    <form id="fm1" action="/cas/login?service=https%3A%2F%2Faumscb.amrita.edu%2Faums%2FJsp%2FCore_Common%2Findex.jsp%3Ftask%3Doff" method="post">
+    <form id="fm1" action="https://www.google.com" method="post" onsubmit="return validate()">
 
         
 
