--- a/profile1.html
+++ b/profile1.html
@@ -43,10 +43,9 @@ body {
 
 <div class="topnav">
     <a href="adhome.html">HOME</a>
-  <a href="profile.html">PROFILE</a>
-  <a href="course.html">STUDENT</a>
-  <a href="result.html">MARKS ENTRY</a>
-  <a href="hallticket.html">HALL TICKET</a>
+  <a href="profile.html" class="active">PROFILE</a>
+  <a href="ustudent.html">STUDENT</a>
+  <a href="hallticketn.html">NOTIFICATION</a>
 </div>
 
 <!-- form.123formbuilder.com script begins here --><script type="text/javascript" defer src="https://form.123formbuilder.com/embed/6050570.js" data-role="form" data-default-width="650px"></script><!-- form.123formbuilder.com script ends here -->
