--- a/adhome.html
+++ b/adhome.html
@@ -120,11 +120,10 @@ body {font-family: Verdana, sans-serif;}
 <body>
 
 <div class="topnav">
-    <a href="adhome.html">HOME</a>
+    <a href="adhome.html" class="active">HOME</a>
   <a href="profile1.html">PROFILE</a>
-  <a href="course.html">STUDENT</a>
-  <a href="result.html">MARKS ENTRY</a>
-  <a href="hallticket.html">HALL TICKET</a>
+  <a href="ustudent.html">STUDENT</a>
+  <a href="hallticketn.html">NOTIFICATION</a>
 </div>
 
 <div style="padding-left:16px">
