--- a/hallticketn.html
+++ b/hallticketn.html
@@ -133,7 +133,7 @@ body {
       </tr>
       <tr>
         <td class="tg-0lax">12</td>
-        <td class="tg-0lax">VASUDA</td>
+        <td class="tg-0lax">NAREN</td>
         <td class="tg-0lax">3</td>
         <td class="tg-0lax">YES</td>
       </tr>
